Fixing spacing issues

--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px 0px 100% 0px;
+  padding: 100px 0px 10% 0px;
 
   h1 {
     font-size: 60px;
