--- a/src/components/works/Works.scss
+++ b/src/components/works/Works.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-
+  padding: 30% 0px 30% 0px;
   .arrow {
     height: 75px;
     position: absolute;
